Fix button widths on mobile. Fixes #15

--- a/src/stylesheets/pageparts/_games-feed.sass
+++ b/src/stylesheets/pageparts/_games-feed.sass
@@ -19,6 +19,10 @@
     @media (min-width: $smallDesktop)
       width: 28%
 
+  .button
+    @media (max-width: $largeMobile)
+      width: 100%
+
 .games-feed-header
   &__container
     @extend %cappedWidth
