--- a/src/stylesheets/pageparts/_two-col-cta.sass
+++ b/src/stylesheets/pageparts/_two-col-cta.sass
@@ -42,6 +42,10 @@
     @media (min-width: $tablet)
       +gutterRight
 
+    .button
+      @media (max-width: $maxTablet)
+        width: 100%
+
   &--image
     position: relative
 
